# d0g

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
inc/: bitfields.h  i2c_adapter.h  imu.h  utils.h
inc/drivers/: lis3mdl.h  lis3mdl_regs.h  lsm6ds33.h  lsm6ds33_regs.h  pca96853.h
src/: i2c_adapter.c  imu.c  main.c
src/drivers/: lis3mdl.c  lsm6ds33.c  pca9685.c
